[gd_scene load_steps=15 format=3 uid="uid://fuonhi3pq7t4"]

[ext_resource type="Script" path="res://scenes/levels/level_3.gd" id="1_4na57"]
[ext_resource type="PackedScene" uid="uid://c8eanhf6fduj5" path="res://nodes/characters/player/player.tscn" id="2_3aytu"]
[ext_resource type="PackedScene" uid="uid://cdfc2efr3t8wa" path="res://nodes/ui/ui.tscn" id="3_c1m0n"]
[ext_resource type="PackedScene" uid="uid://c1jtmgfe1qjly" path="res://nodes/items/camera/custom_camera.tscn" id="3_vfkin"]
[ext_resource type="PackedScene" uid="uid://bisctldckwds" path="res://nodes/ui/options/options.tscn" id="4_wshgl"]
[ext_resource type="TileSet" uid="uid://bfyqs7dr2cap0" path="res://materials/tilesets/city.tres" id="5_exk7i"]
[ext_resource type="PackedScene" uid="uid://d10jtsiykf4da" path="res://nodes/items/box/box.tscn" id="6_ae3sq"]
[ext_resource type="PackedScene" uid="uid://c6ywcuu1ss53v" path="res://nodes/items/key/key.tscn" id="7_ldftk"]
[ext_resource type="PackedScene" uid="uid://bl6084o55t5d0" path="res://nodes/items/door/door.tscn" id="8_q7pbr"]
[ext_resource type="PackedScene" uid="uid://efpyknmk12ym" path="res://nodes/items/laser/laser.tscn" id="9_rq0pu"]
[ext_resource type="PackedScene" uid="uid://cm3ee054oenob" path="res://nodes/items/teleport/teleport.tscn" id="10_a32xx"]
[ext_resource type="PackedScene" uid="uid://chml1iia47al6" path="res://nodes/items/button/button.tscn" id="11_x6yw7"]
[ext_resource type="PackedScene" uid="uid://btf1v8qliqi3g" path="res://nodes/items/radio/radio.tscn" id="12_i6iiu"]
[ext_resource type="AudioStream" uid="uid://coxdkaytrkx70" path="res://sounds/OST/Level1.mp3" id="14_ku3fl"]

[node name="Level3" type="Node2D"]
position = Vector2(80, -224)
script = ExtResource("1_4na57")

[node name="Player" parent="." instance=ExtResource("2_3aytu")]
z_index = 1
position = Vector2(192, 64)

[node name="CustomCamera" parent="Player" instance=ExtResource("3_vfkin")]
position = Vector2(8, 9)
anchor_mode = 1
zoom = Vector2(2.7, 2.7)
position_smoothing_enabled = true

[node name="ui" parent="." instance=ExtResource("3_c1m0n")]
visible = false

[node name="Options" parent="." instance=ExtResource("4_wshgl")]

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("5_exk7i")
format = 2
layer_0/tile_data = PackedInt32Array(-65526, 0, 0, -65518, 0, 0, 720901, 0, 0, 720900, 0, 0, 720899, 0, 0, 720898, 0, 0, 720897, 0, 0, 131078, 0, 0, 524294, 0, 0, 589830, 0, 0, 655366, 0, 0, -65511, 0, 0, -131046, 0, 0, -196582, 0, 0, -327654, 0, 0, -393190, 0, 0, -131062, 0, 0, -458736, 0, 0, -458735, 0, 0, -458734, 0, 0, -458733, 0, 0, -458727, 0, 0, 131072, 0, 0, 196608, 0, 0, 262144, 0, 0, 393216, 0, 0, 458752, 0, 0, 524288, 0, 0, 589824, 0, 0, 655360, 0, 0, 327680, 0, 0, -458728, 0, 0, -131055, 0, 0, 196607, 0, 0, 196606, 0, 0, 131079, 0, 0, 131081, 0, 0, 131080, 0, 0, 10, 0, 0, 65546, 0, 0, 17, 0, 0, 65553, 0, 0, 196625, 0, 0, 262161, 0, 0, 327697, 0, 0, 393233, 0, 0, -65519, 0, 0, -196610, 0, 0, -196609, 0, 0, -262144, 0, 0, -262143, 0, 0, -262142, 0, 0, -262141, 0, 0, -262140, 0, 0, -262139, 0, 0, -262138, 0, 0, -327674, 0, 0, -393210, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 0, 0, 458773, 0, 0, 458774, 0, 0, 458775, 0, 0, 458776, 0, 0, 458777, 0, 0, -65510, 0, 0, 26, 0, 0, 65562, 0, 0, 131098, 0, 0, 262170, 0, 0, 327706, 0, 0, 393242, 0, 0, -458729, 0, 0, -458730, 0, 0, -458731, 0, 0, -458732, 0, 0, -458745, 0, 0, -458744, 0, 0, -458743, 0, 0, -458742, 0, 0, -458741, 0, 0, -458740, 0, 0, -458739, 0, 0, -458738, 0, 0, -458737, 0, 0, -131061, 0, 0, -131056, 0, 0, 131082, 0, 0, 131083, 0, 0, 131088, 0, 0, 196614, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 458758, 0, 0, 458769, 0, 0, -262118, 0, 0, 458753, 0, 0, 458757, 0, 0, 131073, 0, 0, 131077, 0, 0, 65536, 0, 0, -3, 0, 0, -65539, 0, 0, -131075, 0, 0, 65533, 0, 0, 131069, 0, 0, -196611, 0, 0, 720896, 0, 0, 720902, 0, 0, 458778, 0, 0, 524305, 0, 0, 131089, 0, 0, 131090, 0, 0, 131097, 0, 0, 327703, 0, 0, 131095, 0, 0, -65513, 0, 0, -65516, 0, 0, 131092, 0, 0, 327700, 0, 0, -196588, 0, 0, -327660, 0, 0, -327657, 0, 0, -196585, 0, 0, -458746, 0, 0, 196605, 0, 0, 131070, 0, 0, 65537, 0, 0)

[node name="Box" parent="." instance=ExtResource("6_ae3sq")]
position = Vector2(160, 80)

[node name="Box3" parent="." instance=ExtResource("6_ae3sq")]
position = Vector2(224, 0)

[node name="Box2" parent="." instance=ExtResource("6_ae3sq")]
position = Vector2(48, 64)

[node name="Key" parent="." instance=ExtResource("7_ldftk")]
position = Vector2(224, 80)

[node name="Door" parent="." instance=ExtResource("8_q7pbr")]
position = Vector2(416, 48)

[node name="Buttons" type="Node2D" parent="."]
z_index = -1

[node name="StartLaserButton" parent="Buttons" instance=ExtResource("11_x6yw7")]
modulate = Color(0.917647, 1, 1, 1)
position = Vector2(240, 0)

[node name="EndLaserButton" parent="Buttons" instance=ExtResource("11_x6yw7")]
modulate = Color(0.917647, 1, 1, 1)
position = Vector2(128, 0)

[node name="Lasers" type="Node" parent="."]

[node name="Laser" parent="Lasers" instance=ExtResource("9_rq0pu")]
position = Vector2(176, -128)

[node name="Laser5" parent="Lasers" instance=ExtResource("9_rq0pu")]
position = Vector2(240, -272)

[node name="StartLaser" parent="Lasers" instance=ExtResource("9_rq0pu")]
position = Vector2(288, -192)
rotation = 1.5708

[node name="EndLaser" parent="Lasers" instance=ExtResource("9_rq0pu")]
position = Vector2(288, -256)
rotation = 1.5708

[node name="Laser2" parent="Lasers" instance=ExtResource("9_rq0pu")]
position = Vector2(128, -112)
rotation = 1.5708

[node name="Laser3" parent="Lasers" instance=ExtResource("9_rq0pu")]
position = Vector2(128, -192)
rotation = 1.5708

[node name="Laser8" parent="Lasers" instance=ExtResource("9_rq0pu")]
position = Vector2(352, -272)

[node name="Teleports" type="Node2D" parent="."]

[node name="Teleport" parent="Teleports" node_paths=PackedStringArray("pair") instance=ExtResource("10_a32xx")]
position = Vector2(128, 48)
pair = NodePath("../Teleport2")

[node name="Teleport3" parent="Teleports" node_paths=PackedStringArray("pair") instance=ExtResource("10_a32xx")]
position = Vector2(32, 64)
pair = NodePath("../Teleport4")

[node name="Teleport4" parent="Teleports" node_paths=PackedStringArray("pair") instance=ExtResource("10_a32xx")]
position = Vector2(-16, 16)
pair = NodePath("../Teleport3")

[node name="Teleport2" parent="Teleports" node_paths=PackedStringArray("pair") instance=ExtResource("10_a32xx")]
position = Vector2(32, 144)
pair = NodePath("../Teleport")

[node name="Radio" parent="." instance=ExtResource("12_i6iiu")]
position = Vector2(288, 48)
current_song = ExtResource("14_ku3fl")
